--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,32 @@
    background-color:black;
   
 }
+.custom-swiper .swiper-button-prev,
+.custom-swiper .swiper-button-next {
+  top: 50%;
+  width: 40px;
+  
+  height: 40px;
+  /* background-color: white; */
+  border-radius: 9999px; /* fully rounded */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color:white;
+  z-index: 10;
+  transition: transform 0.3s ease;
+}
+  
+.custom-swiper .swiper-button-prev:hover,
+.custom-swiper .swiper-button-next:hover {
+  transform: scale(1.1);
+}
+
+.custom-swiper .swiper-button-prev {
+   /* left: -5px; */
+   
+   
+}
+
+.custom-swiper .swiper-button-next {
+  /* right: -5px;  */
+}
+ 
